Name:                weshift
Version:             0.2
Synopsis:            Tool for organizing time at workplaces
Description:         
License:             BSD3
Author:              Daniel Patterson
Maintainer:          dbp@riseup.net
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable weshift
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    base >= 4 && < 5,
    bytestring >= 0.9.1 && < 0.10,
    data-lens >= 2.0.1 && < 2.11,
    data-lens-template >= 2.1 && < 2.2,
    heist >= 0.8,
    MonadCatchIO-transformers >= 0.2.1 && < 0.4,
    mtl >= 2 && < 3,
    snap == 0.9.*,
    snap-core   == 0.9.*,
    snap-server == 0.9.*,
    snap-loader-static == 0.9.*,
    text >= 0.11 && < 0.12,
    time >= 1.2.0.5 && < 1.5,
    xmlhtml >= 0.1,
    blaze-html,
    HDBC >= 2.2,
    HDBC-postgresql >= 2.2,
    containers,
    bson,
    digestive-functors >= 0.5,
    digestive-functors-snap >= 0.5,
    digestive-functors-heist >= 0.5,
    QuickCheck >= 2 && < 3,
    split,
    random,
    aeson,
    network,
    HTTP,
    attoparsec,
    aeson,
    heist-async >= 0.5,
    email-postmark,
    resource-pool >= 0.1,
    --snap-less,
    old-locale,
    ssv >= 0.2,
    parsec >= 3.1

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.9.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
